# trenitalia-curses-tabellone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  tabellone.cpp  tabellone.h
.github/workflows/: cmake-multi-platform.yml
